--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.6"
 license = {text = "MIT"}
 
 [project.urls]
-Homepage = ""
+Homepage = "https://github.com/jerrylususu/bangumi-takeout-py"
 [tool.pdm]
 
 [build-system]
