--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: 3.8
 
@@ -42,10 +42,10 @@ jobs:
         run: python generate_csv.py
 
       - name: Upload output file
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: Output
           path: |
             takeout.json
             takeout.html
-            takeout.csv
+            takeout*.csv
